	'src/glassplayer/conn_xcast.h'.
2016-01-07 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Codec' class in 'src/common/codec.cpp' and
	'src/common/codec.h'.
2016-01-07 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked minor bugs in 'configure.ac'.
2016-01-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplay/conn_xcast.cpp' that caused metadata
	strings to be truncated if they contained an apostrophe character.
2016-01-08 Fred Gleason <fredg@paravelsystems.com>
	* Added a Null codec in 'src/glassplayer/codec_null.cpp' and
	'src/glassplayer/codec_null.h'.
	* Added a '--dump-bitstream' switch to glassplayer(1).
	* Fixed a bug in 'src/glassplay/conn_xcast.cpp' that caused gaps in
	the downloaded bitstream when process metadata updates.
2016-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/conn_xcast.cpp' that made it
	impossible to process blank metadata updates.
2016-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an MPEG-1/1.5 decoder in 'src/glassplayer/codec_mpeg1.cpp'
	and 'src/glassplay/codec_mpeg1.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'AudioDevice' base class in 'src/common/audiodevice.cpp'
	and 'src/common/audiodevice.h'.
	* Implemented a STDOUT audio device in 'src/glassplayer/dst_stdout.cpp'
	and 'src/glassplayer/dst_stdout.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a glassplayer(1) man page.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the '--verbose' option.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a '--stdout-format=' switch for glassplayer(1).
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a FILE audio device in 'src/glassplayer/dst_file.cpp'
	and 'src/glassplayer/dst_file.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an ALSA audio device in 'src/glassplayer/dst_alsa.cpp'
	and 'src/glassplayer/dst_alsa.h'.